TestCases/ASTTests/SemanticErrorsTests/createTests/read_file_before.dot
digraph AST {
  "135595906048416" [label="Start"];
  "135595906048416" -> "135595906047264";
  "135595906047264" [label="Code"];
  "135595906047264" -> "135595906044624";
  "135595906047264" -> "135595906046832";
  "135595906047264" -> "135595906097712";
  "135595906044624" [label="Declaration"];
  "135595906044624" -> "135595906047888";
  "135595906044624" -> "135595906045584";
  "135595906047888" [label="a"];
  "135595906045584" [label="3"];
  "135595906046832" [label="Declaration"];
  "135595906046832" -> "135595906099488";
  "135595906046832" -> "135595906100352";
  "135595906099488" [label="True"];
  "135595906100352" [label="1"];
  "135595906097712" [label="Function"];
  "135595906097712" -> "135595906099248";
  "135595906097712" -> "135595906099296";
  "135595906097712" -> "135595906098672";
  "135595906099248" [label="main"];
  "135595906099296" [label="Parameters"];
  "135595906098672" [label="Code"];
  "135595906098672" -> "135595906098192";
  "135595906098672" -> "135595906101936";
  "135595906098192" [label="Declaration"];
  "135595906098192" -> "135595906099632";
  "135595906098192" -> "135595906100208";
  "135595906099632" [label="True"];
  "135595906100208" [label="Expr"];
  "135595906100208" -> "135595906101168";
  "135595906100208" -> "135595906101216";
  "135595906100208" -> "135595906101744";
  "135595906101168" [label="True"];
  "135595906101216" [label="-"];
  "135595906101744" [label="20"];
  "135595906101936" [label="Return"];
  "135595906101936" -> "135595906102656";
  "135595906102656" [label="0"];
}
